--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -114,7 +114,7 @@
         iframe {
             width: 100%;
             height: 100%;
-            min-height: 400px;
+            min-height: 500px;
         }
     }
 
@@ -122,7 +122,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        height: 400px;
+        height: 500px;
         padding-bottom: 50px;
         order: 1;
         width: 90%;
@@ -154,10 +154,21 @@
             }
         }
 
+        .wrapper {
+          position: relative;
+          width: 100%;
+          .input {
+            width: 100%;
+          }
+        }
+
         .form-help-message {
             color: red;
             font-size: 12px;
             font-style: italic;
+           position: absolute;
+           bottom: -30px;
+           left: 0;
         }
 
 
