--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -157,6 +157,7 @@
         .wrapper {
           position: relative;
           width: 100%;
+          margin-bottom: 20px;
           .input {
             width: 100%;
           }
