--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -159,7 +159,7 @@
           width: 100%;
           margin-bottom: 20px;
           .input {
-            width: calc(100%-20px);
+            width: calc(100% - 20px);
           }
         }
 
