--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,15 +1,15 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css");
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
 
-@font-face {
-    font-family: 'GothamBook';
-    src: url('../fonts/Gotham-Book-Font/Gotham\ Book\ Font.otf') format('woff2'),
-}
+// @font-face {
+//     font-family: 'GothamBook';
+//     src: url('../fonts/Gotham-Book-Font/Gotham\ Book\ Font.otf') format('woff2'),
+// }
 
-@font-face {
-    font-family: 'Gotham';
-    src: url('../fonts/Gotham-Font/GothamMedium.ttf') format('woff2');
-}
+// @font-face {
+//     font-family: 'Gotham';
+//     src: url('../fonts/Gotham-Font/GothamMedium.ttf') format('woff2');
+// }
 
 @font-face {
     font-family: 'Roboto';
