--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -9,7 +9,17 @@ body {
 .language {
   color: $white;
   position: absolute;
-  right: 0;
+  right: 20px;
+  top: 80px;
+  z-index: 100;
+
+  @media(min-width: 768px) {
+    top: inherit;
+  }
+
+  @media(min-width: 992px) {
+    right: 0;
+  }
 
     .lang-change {
       cursor: pointer;
@@ -132,8 +142,12 @@ nav {
                     }
                 }
 
+                @media(min-width: 768px) {
+                  margin: 30px 10px;
+                }
+
                 @media(min-width: 992px) {
-                    margin: 30px 25px;
+                  margin: 30px 25px;
                 }
 
 
