--- a/scss/_jumbotron.scss
+++ b/scss/_jumbotron.scss
@@ -41,11 +41,7 @@
             color: $bgc;
         }
     }
-
-
-
 }
-
 
 .jumbo-img {
     border-bottom: 2px solid $bgc;
@@ -56,31 +52,28 @@
     }
 }
 
-
-
-
 .icon {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 40px 0;
     border-radius: 50%;
     position: relative;
     transition: .3s;
+    width: 200px;
+    height: 200px;
 
     img {
-        border: 1px solid $yellow;
         border-radius: 50%;
         padding: 10px;
-    }
+        width: 100%;
+        height: 100%;
+        filter: grayscale(20%);
+        transition: .3s;
 
-    &:hover {
-        transform: scale(1.05);
-
-        img {
-            border: 1px solid $bgc;
+        &:hover {
+          filter: grayscale(0%);
         }
-
     }
 
     .interests {
